--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  
 
   <link rel="stylesheet" href="main.css">
 </head>
@@ -66,6 +67,7 @@
       </li>
     </ul>
   </div>
-
+<script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
