--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </li>
         </ul>
     </div>
-    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </body>
 
